clusters/talos-robbinsdale/apps/media/app/tdarr/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  labels:
    app: tdarr
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: tdarr
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      containers:
      - name: tdarr
        image: ghcr.io/haveagitgat/tdarr:2.46.01
        ports:
        - containerPort: 8265
        - containerPort: 8266
        volumeMounts:
        - name: tdarr-config
          mountPath: /app/config
        - name: tdarr-server
          mountPath: /app/server
        - name: tv-volume
          mountPath: /media/tvshows
        - name: movies-volume
          mountPath: /media/movies
        # - name: transcode-cache
        #   mountPath: /temp
        livenessProbe:
          httpGet:
            path: /
            port: 8265
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            memory: "5Gi"
            cpu: "3"
          limits:
            memory: "5Gi"
            cpu: "5"
      volumes:
      - name: tdarr-config
        persistentVolumeClaim:
          claimName: tdarr-config-unas
      - name: tdarr-server
        persistentVolumeClaim:
          claimName: tdarr-server-unas
      - name: tv-volume
        persistentVolumeClaim:
          claimName: sonarr-tv-unas
      - name: movies-volume
        persistentVolumeClaim:
          claimName: radarr-movies-unas
      # - name: transcode-cache
      #   persistentVolumeClaim:
      #     claimName: tdarr-transcode-cache
