clusters/talos-robbinsdale/apps/media/app/tdarr/worker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tdarr-worker
  labels:
    app: tdarr-worker
spec:
  serviceName: tdarr-worker
  replicas: 3
  selector:
    matchLabels:
      app: tdarr-worker
  template:
    metadata:
      labels:
        app: tdarr-worker
    spec:
      containers:
        - name: tdarr-worker
          image: ghcr.io/haveagitgat/tdarr_node:2.46.01
          ports:
            - containerPort: 8266
          volumeMounts:
            - name: tv-volume
              mountPath: /media/tvshows
            - name: movies-volume
              mountPath: /media/movies
            # - name: transcode-cache
            #   mountPath: /temp
          resources:
            requests:
              memory: "5Gi"
              cpu: "3"
            limits:
              memory: "5Gi"
              cpu: "5"
      volumes:
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-tv-unas
        - name: movies-volume
          persistentVolumeClaim:
            claimName: radarr-movies-unas
        # - name: transcode-cache
        #   persistentVolumeClaim:
        #     claimName: tdarr-transcode-cache
