clusters/talos-robbinsdale/apps/media/app/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  selector:
    app: tdarr
  ports:
  - name: ui
    port: 8265
    protocol: TCP
    targetPort: 8265
  - name: server
    port: 8266
    protocol: TCP
    targetPort: 8266
  type: ClusterIP
