clusters/talos-robbinsdale/apps/media/app/tdarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "tdarr.rajsingh.info"
    - "tdarr.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tdarr
          port: 8265
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
